# io.mpv.Mpv

./: io.mpv.Mpv.metainfo.xml  io.mpv.Mpv.yml
lua51/: 0001-visibility.patch  0003-fix-call-render-function-again.patch  meson.build
luajit/: 0001-visibility.patch  meson.build  src.meson.build
